--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ repository = "https://github.com/xudesheng/mdbook-typstpdf"
 documentation = "https://docs.rs/mdbook-typstpdf"
 homepage = "https://github.com/xudesheng/mdbook-typstpdf"
 readme = "README.md"
-keywords = ["mdbook", "typst", "pdf", "documentation", "book"]
-categories = ["command-line-utilities", "text-processing", "development-tools::build-utils", "documentation"]
+keywords = ["mdbook", "typst", "pdf", "documentation", "book", "markdown"]
+categories = ["command-line-utilities", "text-processing", "development-tools::build-utils"]
 
 
 [dependencies]
